kspw-angular-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: kspw-angular
  labels:
    app: interactive-resume
spec:
  ports:
  - port: 80
  selector:
    app: interactive-resume
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kspw-angular
spec:
  selector:
    matchLabels:
      app: interactive-resume
  replicas: 1
  template:
    metadata:
      labels:
        app: interactive-resume
    spec:
      containers:
      - name: kspw-angular
        image: kellenschmidt/kspw-angular:v2
        ports:
        - containerPort: 80
