kspw-mysql-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: kspw-mysql
  labels:
    app: url-shortener
    type: database
spec:
  ports:
  - port: 3306
  selector:
    app: url-shortener
    type: database
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kspw-mysql
spec:
  selector:
    matchLabels:
      app: url-shortener
      type: database
  replicas: 1
  template:
    metadata:
      labels:
        app: url-shortener
        type: database
    spec:
      containers:
      - name: kspw-mysql-db
        image: mysql:5.7
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-storage
          mountPath: /var/lib/mysql
        - name: mysql-grant-permissions
          mountPath: /docker-entrypoint-initdb.d
      - name: kspw-mysql-cron
        image: kellenschmidt/kspw-mysql-cron:v1
        volumeMounts:
        - name: mysql-backups
          mountPath: /home/backups
        lifecycle:
          preStop:
            exec:
              command: ["/home/bin/backup_db.sh","exit","&&","/home/bin/remove_backups.sh","exit","&&","/home/bin/upload_cloud.sh"]
      volumes:
      - name: mysql-storage
        emptyDir: {}
      - name: mysql-backups
        emptyDir: {}
      - name: mysql-grant-permissions
        configMap:
          name: mysql-grant-permissions-config
