kspw-phpmyadmin-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: kspw-phpmyadmin
  labels:
    app: phpmyadmin
spec:
  ports:
  - port: 80
  selector:
    app: phpmyadmin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kspw-phpmyadmin
spec:
  selector:
    matchLabels:
      app: phpmyadmin
  replicas: 1
  template:
    metadata:
      labels:
        app: phpmyadmin
    spec:
      containers:
      - name: kspw-phpmyadmin
        image: phpmyadmin/phpmyadmin:latest
        ports:
        - containerPort: 80
