kspw-ingress-prod.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kspw-ingress-prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: kellenschmidt.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kspw-angular
          servicePort: 80
  - host: dqc.kellenschmidt.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kspw-dqc-web
          servicePort: 80
      - path: /api
        backend:
          serviceName: kspw-dqc-api
          servicePort: 80
  - host: api.kellenschmidt.com
    http:
      paths:
      - path: /v1
        backend:
          serviceName: kspw-slim
          servicePort: 80
      - path: /v2
        backend:
          serviceName: kspw-express
          servicePort: 80
  - host: pma.kellenschmidt.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kspw-phpmyadmin
          servicePort: 80
  - host: dashboard.kellenschmidt.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 80
